<resources>
    <string name="app_name">Pacefinity</string>
    <string name="financial_calculator">Financial Calculator</string>
    <string name="household_income">Enter Household Income</string>
    <string name="tuition_fee">Enter Tuition Fee</string>
    <string name="enter_gpa">Enter GPA</string>
    <string name="estimated_financial_aid">Estimated Financial Aid</string>
    <string name="not_eligible_for_aid">Not eligible for aid</string>
    <string name="_2f">%.2f</string>
    <string name="calculate_aid">Calculate Aid</string>
    <string name="navigate">Financial Aid Calculator</string>
    <string name="Scholarships">Scholarships</string>
    <string name="Header">Welcome to Pacefinity!</string>
    <string name="ExternalR">External Resources</string>


    ///Everything after this is for scholarship recycler view
    <string-array name="scholarships">
        <item>Honors College Scholarship Merit</item>
        <item>Presidents Scholarship Merit</item>
        <item>Trustee Recognition Award Merit</item>
        <item>Pace Incentive Award Merit</item>
        <item>Deans Transfer Scholarship Merit</item>
        <item>Transfer Incentive Award Merit</item>
        <item>Community College Student Transfer Award Merit</item>
        <item>Alpha Beta Gamma Scholarship Merit</item>
        <item>Phi Theta Kappa Award Merit</item>
        <item>Legacy Scholarship Merit</item>
        <item>Summer Scholars Award Merit</item>
        <item>Community Service Scholarship</item>
        <item>Veteran Tuition Scholarship</item>
        <item>Endowed and restricted scholarships</item>
        <item>Barnes N Nobles Book Scholarship</item>
        <item>Pace Grant</item>
        <item>Trustee Tuition Grant</item>
    </string-array>
    <string-array name="moneyRange">
        <item>&amp;gt$15,000</item>
        <item>$9,500</item>
        <item>~$5000</item>
        <item>~$5000</item>
        <item>~$8000</item>
        <item>~$5000</item>
        <item>~$10,000</item>
        <item>$1000</item>
        <item>$1000</item>
        <item>$1000</item>
        <item>$3000</item>
        <item>&amp;lt$5000</item>
        <item>~50% tuition</item>
        <item>Money Variable</item>
        <item>Money Variable</item>
        <item>Money Variable</item>
        <item>Money Variable</item>
    </string-array>
    <string-array name="requirements">
        <item>3.3 GPA</item>
        <item>Freshman - 3.0 GPA - minimum of 1200 on SAT</item>
        <item>Freshman - 2.0 GPA</item>
        <item>Freshman - 2.0 GPA</item>
        <item>Transfer - 3.0 GPA</item>
        <item>Transfer - 2.0 GPA</item>
        <item>CC Transfer - 3.2 GPA</item>
        <item>Member of Alpha Beta Gamma- 3.0 QPA</item>
        <item>Member of Phi Theta Kappa - 3.0 QPA</item>
        <item>Parent who attended Pace - 2.0 QPA</item>
        <item>Complete Paces summer scholar institute - 3.0 QPA</item>
        <item>Freshman: High school average B and 1080 SAT - Transfer: 3.0 GPA - Financial need</item>
        <item>Lack of information - Contact the athletic department for details</item>
        <item>Must be a Veteran</item>
        <item>Financial need based - 3.0 QPA - fafsa filed - Maintain good standing</item>
        <item>Must apply online (Link included) - NO CAP - fafsa filed, matriculated</item>
        <item>Financial need based - 2.0 QPA - US citizen</item>
        <item>24 credits at pace - 3.5 GPA</item>
    </string-array>
    <string-array name="links">
        <item>https://www.pace.edu/honors-college/new-york-city-students</item>
        <item>https://www.collegexpress.com/scholarships/presidents-scholarship/2002720/</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants#merit</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants#merit</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants#merit</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants#merit</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants#merit</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants#merit</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants#merit</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants#merit</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants#merit</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants#merit</item>
        <item>https://www.ncsasports.org/athletic-scholarships/football/new-york/pace-university</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants</item>
        <item>https://bigfuture.collegeboard.org/scholarships/barnes-and-noble-scholarship</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants#merit</item>
        <item>https://www.pace.edu/financial-aid/types-of-financial-aid/institutional-scholarships-and-grants#merit</item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="otherInfo">
        <item>Merit Scholarship</item>
        <item>Merit Scholarship</item>
        <item>Merit Scholarship</item>
        <item>Merit Scholarship</item>
        <item>Merit Scholarship</item>
        <item>Merit Scholarship</item>
        <item>Merit Scholarship</item>
        <item>Merit Scholarship</item>
        <item>Merit Scholarship</item>
        <item>Merit Scholarship</item>
        <item>Merit Scholarship</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
</resources>